--- a/style.css
+++ b/style.css
@@ -1,67 +1,61 @@
+/* Grundlegende Stile für den gesamten Body */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
-}
-
-header {
-    background-color: #007BFF;
-    color: white;
-    width: 100%;
-    padding: 20px 0;
-    text-align: center;
-}
-
-main {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
+    font-family: Arial, sans-serif;
+    overflow: hidden; /* Verhindert Scrollen */
+    position: relative; /* Für absolute Positionierung innerhalb */
 }
 
-.intro {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: 600px;
-}
-
-.intro h2 {
-    color: #333;
-}
-
-.intro p {
-    color: #666;
-}
-
-button {
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-footer {
-    background-color: #007BFF;
-    color: white;
+/* Hintergrundbild mit anfänglichem Unschärfeeffekt */
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    padding: 10px 0;
-    text-align: center;
+    height: 100%;
+    background-image: url('Bilder/justitia_landingpage_2.jpg');
+    background-size: cover; /* Skaliert das Bild, sodass der gesamte Hintergrund bedeckt ist */
+    background-repeat: no-repeat; /* Verhindert die Wiederholung des Bildes */
+    background-attachment: fixed; /* Das Bild bleibt beim Scrollen an Ort und Stelle */
+    background-position: center; /* Zentriert das Bild */
+}
+
+/* Überlagerung für die linke Hälfte der Landingpage */
+.overlay {
     position: absolute;
-    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 40%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Schwarze Farbe mit 20% Transparenz */
+}
+
+/* Text für die Begrüßungsnachricht */
+.welcome-text {
+    position: absolute;
+    top: 60%;
+    left: 20px; /* Abstand von links */
+    transform: translateY(-50%);
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        top: 60%;
+        opacity: 0;
+    }
+    to {
+        top: 50%;
+        opacity: 1;
+    }
 }
