--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     position: relative; /* Für absolute Positionierung innerhalb */
 }
 
-/* Hintergrundbild mit anfänglichem Unschärfeeffekt */
+/* Hintergrundbild */
 .background {
     position: fixed;
     top: 0;
@@ -29,33 +29,60 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 40%;
+    width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Schwarze Farbe mit 20% Transparenz */
+    background-color: rgba(0, 0, 0, 0.6); /* Schwarze Farbe mit 60% Transparenz */
+}
+
+/* Container für den Begrüßungstext und Button */
+.welcome-container {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    opacity: 0;
+    animation: fadeInMoveUp 3s ease forwards;
+}
+
+/* Animation für das Einblenden und Bewegen */
+@keyframes fadeInMoveUp {
+    0% {
+        top: 60%;
+        opacity: 0;
+    }
+    100% {
+        top: 50%;
+        opacity: 1;
+    }
 }
 
 /* Text für die Begrüßungsnachricht */
 .welcome-text {
-    position: absolute;
-    top: 60%;
-    left: 20px; /* Abstand von links */
-    transform: translateY(-50%);
-    color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 25px;
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    margin-bottom: 20px;
+    color: white;
 }
 
-@keyframes fadeInAnimation {
-    from {
-        top: 60%;
-        opacity: 0;
-    }
-    to {
-        top: 50%;
-        opacity: 1;
-    }
+/* Stil für den Button */
+.welcome-button {
+    display: inline-block;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 8px; /* Abgerundete Ecken */
+}
+
+/* Hover-Effekt für den Button */
+.welcome-button:hover {
+    background-color: white;
+    color: black;
 }
